remove function forward declaration in ModelRunnerBase.h

--- a/dorado/basecall/CMakeLists.txt
+++ b/dorado/basecall/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(dorado_basecall STATIC
     crf_utils.h
     ModelRunner.cpp
     ModelRunner.h
+    ModelRunnerBase.cpp
     ModelRunnerBase.h
     decode/beam_search.cpp
     decode/beam_search.h
