[DOR-1122] Added unit tests for merge_vc_samples to a new file tests/PolishMergeVCSamples.cpp. Added operator== for VariantCallingSample.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -76,6 +76,7 @@ add_executable(dorado_tests
     TrimTest.cpp
     PafUtilsTest.cpp
     PolishNormalizeVariantsTest.cpp
+    PolishMergeVCSamples.cpp
     PolishSampleTest.cpp
     PolishTrimTest.cpp
     PolishWindowTest.cpp
