[DOR-1127] Link to libsz and libaec statically
HDF5 doesn't respect static linking and will link to these dynamically.
It's not a simple fix upstream since the logic of "link to everything
statically" means we'd end up linking to libm.a and libdl.a which then
cause even bigger pain points.

--- a/dorado/data_loader/CMakeLists.txt
+++ b/dorado/data_loader/CMakeLists.txt
@@ -9,7 +9,7 @@ PUBLIC
 PRIVATE
     spdlog::spdlog
     pod5_libs
-    HDF5::HDF5
+    HDF5Wrapper
     vbz_hdf_plugin
     ${ZLIB_LIBRARIES}
     HighFive::Include
