[DOR-1131] Moved the batching related code from Polish to a new lib dorado/secondary/batching.*.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -367,6 +367,8 @@ add_library(dorado_lib
     dorado/utils/rle.h
     dorado/utils/ssize.h
     dorado/utils/span.h
+    dorado/secondary/batching.cpp
+    dorado/secondary/batching.h
 )
 
 enable_warnings_as_errors(dorado_lib)
