[DOR-1131] Moved the print_container and print_container_as_string to a new file dorado/utils/container_utils.h and updated code.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -360,6 +360,7 @@ add_library(dorado_lib
     dorado/polish/architectures/model_torch_base.h
     dorado/polish/architectures/model_torch_script.cpp
     dorado/polish/architectures/model_torch_script.h
+    dorado/utils/container_utils.h
     dorado/utils/io_utils.cpp
     dorado/utils/io_utils.h
     dorado/utils/region.cpp
