[DOR-1141] Added unit tests for decode_variants to tests/PolishDecodeVariantsTest.cpp.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -75,6 +75,7 @@ add_executable(dorado_tests
     TimeUtilsTest.cpp
     TrimTest.cpp
     PafUtilsTest.cpp
+    PolishDecodeVariantsTest.cpp
     PolishNormalizeVariantsTest.cpp
     PolishMergeVCSamples.cpp
     PolishSampleTest.cpp
