[DOR-1131] Moved tests/PolishTrimTest.cpp -> tests/SecondaryTrimTest.cpp and updated the namespaces.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -79,8 +79,8 @@ add_executable(dorado_tests
     SecondaryNormalizeVariantsTest.cpp
     SecondaryMergeVCSamplesTest.cpp
     SecondarySampleTest.cpp
+    SecondaryTrimTest.cpp
     SecondaryWindowTest.cpp
-    PolishTrimTest.cpp
     RleTest.cpp
     CorrectionWindowTest.cpp
 )
