[DOR-1131] Fixed the CMakeLists.txt, utils sources were defined in the root CMakeLists.txt and not in dorado/utils/CMakeLists.txt.

--- a/dorado/utils/CMakeLists.txt
+++ b/dorado/utils/CMakeLists.txt
@@ -73,6 +73,13 @@ add_library(dorado_utils
     paf_utils.h
     fai_utils.cpp
     fai_utils.h
+    container_utils.cpp
+    container_utils.h
+    io_utils.cpp
+    io_utils.h
+    rle.h
+    ssize.h
+    span.h
  )
 
 target_compile_definitions(dorado_utils
