DOR-1115 - add ModulesParams to modbase model config to store detailed structure of modbase models to add flexibility in the design. Created config/common to store shared canonical and modbase model config structs and parsing logic

--- a/dorado/modbase/CMakeLists.txt
+++ b/dorado/modbase/CMakeLists.txt
@@ -27,6 +27,7 @@ target_include_directories(dorado_modbase
 target_link_libraries(dorado_modbase
     PUBLIC
         torch_lib
+        dorado_config
     PRIVATE
         dorado_utils
         dorado_torch_utils
