[DOR-1148] Disable noble unittests for now

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -263,7 +263,11 @@ build:linux:x86:noble:
   extends:
     - .linux_build_dependencies
     - .linux_runner
-    - .build_and_test_dorado
+# TODO: DOR-1161 - modbase unittests currently fail on noble
+    #- .build_and_test_dorado
+  stage: build
+  script:
+    - !reference [.run_dorado_cmake_build]
   before_script:
     - !reference [.linux_build_dependencies, before_script]
     - apt-get install -y build-essential
