DOR-1138 create new module dorado/nn moving all custom modules from the LSTM models other than the root model itself into Modules for re-use in modbase models later. Split out the WorkingMemory class into it's own file so that it can be used by the root model implementations.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,6 +141,7 @@ add_subdirectory(dorado/torch_utils)
 add_subdirectory(dorado/models)
 add_subdirectory(dorado/model_downloader)
 add_subdirectory(dorado/basecall)
+add_subdirectory(dorado/nn)
 add_subdirectory(dorado/modbase)
 add_subdirectory(dorado/devtools)
 add_subdirectory(dorado/secondary)
