DOR-1160 Move over to using new dorado::nn. Rename dorado::basecall::nn to ::t smodels to avoid name conflicts and confusion with new dorado::nn modules.

--- a/dorado/basecall/CMakeLists.txt
+++ b/dorado/basecall/CMakeLists.txt
@@ -13,10 +13,10 @@ add_library(dorado_basecall STATIC
     decode/CPUDecoder.h
     decode/Decoder.cpp
     decode/Decoder.h
-    nn/CRFModel.cpp
-    nn/CRFModel.h
-    nn/TxModel.cpp
-    nn/TxModel.h
+    model/CRFModel.cpp
+    model/CRFModel.h
+    model/TxModel.cpp
+    model/TxModel.h
 )
 
 if (DORADO_GPU_BUILD)
@@ -27,8 +27,8 @@ if (DORADO_GPU_BUILD)
             MetalCaller.h
             MetalModelRunner.cpp
             MetalModelRunner.h
-            nn/MetalCRFModel.cpp
-            nn/MetalCRFModel.h
+            model/MetalCRFModel.cpp
+            model/MetalCRFModel.h
         )
     else()
         target_sources(dorado_basecall
@@ -58,6 +58,7 @@ target_link_libraries(dorado_basecall
         dorado_utils
         dorado_config
     PRIVATE
+        dorado_nn
         spdlog::spdlog
 )
 
