DOR-1160 Breakout LSTMStack as a separate module

--- a/dorado/nn/CMakeLists.txt
+++ b/dorado/nn/CMakeLists.txt
@@ -5,6 +5,8 @@ add_library(dorado_nn STATIC
     CRFModules.h
     KoiUtils.cpp
     KoiUtils.h
+    LSTMStack.cpp
+    LSTMStack.h
     TxModules.cpp
     TxModules.h
     WorkingMemory.cpp
