[DOR-1130] Refactored the kadayashi_utils, added them to CMakeLists and resolved errors/warnings.

--- a/dorado/secondary/CMakeLists.txt
+++ b/dorado/secondary/CMakeLists.txt
@@ -49,6 +49,8 @@ add_library(dorado_secondary
     features/encoder_factory.h
     features/encoder_read_alignment.cpp
     features/encoder_read_alignment.h
+    features/kadayashi_utils.cpp
+    features/kadayashi_utils.h
     features/medaka_bamiter.cpp
     features/medaka_bamiter.h
     features/medaka_counts.cpp
