DOR-1171 Fix enabling of gcc-toolset-11 in rocky builds.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -153,8 +153,6 @@ variables:
 .build_dorado_archive:
   stage: build
   script:
-    - which gcc
-    - gcc --version
     - !reference [.run_dorado_cmake_build]
     - !reference [.run_dorado_cmake_cpack]
   artifacts:
@@ -492,10 +490,11 @@ build_archive:linux:x86:rocky8:cuda12:
   variables:
     CUDA: "12.8"
     BUILD_OPTIONS: "-DDYNAMIC_HDF=ON"
-  before_script:
-    - scl enable gcc-toolset-11 bash
+  script:
+    - source /opt/rh/gcc-toolset-11/enable
     - which gcc
     - gcc --version
+    - !reference [.build_dorado_archive, script]
   extends:
     - .linux_runner
     - .build_dorado_archive
