--- a/.gitlab/mlhub.yml
+++ b/.gitlab/mlhub.yml
@@ -20,24 +20,24 @@
     - |
       curl -i --header "Content-Type: application/json" \
       --request POST \
-      --data '{
-          "key": "'${MLHUB_TRIGGER_SRE}'",
-          "job_name": "Dorado SRE: '${CONDITION}' '${CI_COMMIT_REF_NAME}' - '"$CI_COMMIT_TITLE"' ",
-          "script_parameters": {
-              "models":'${MODELS}',
-              "duplex_models":'${DUPLEX_MODELS}',
-              "sre_output":"'${SRE_OUTPUT_ROOT}'/'${CI_COMMIT_SHA}'/",
-              "sre_config":"${projectDir}/configs/'${SRE_CONFIG}'",
-              "basecaller_mode":"dorado_artifact",
-              "basecaller":"'${CI_COMMIT_SHA}'"
-              }
-      }' \
-      ${MLHUB_TRIGGER_URL}
+      --data "{
+         \"key\": \"${MLHUB_TRIGGER_SRE}\",
+         \"job_name\": \"Dorado ${TITLE} ${CI_COMMIT_REF_NAME} ${CI_COMMIT_SHORT_SHA}\",
+         \"script_parameters\": {
+             \"models\": ${MODELS},
+             \"duplex_models\": ${DUPLEX_MODELS},
+             \"sre_output\": \"${SRE_OUTPUT_ROOT}/${CI_COMMIT_SHA}/\",
+             \"sre_config\": \"${projectDir}/configs/${SRE_CONFIG}\",
+             \"basecaller_mode\": \"dorado_artifact\",
+             \"basecaller\": \"${CI_COMMIT_SHA}\"
+         }
+      }" \
+      "${MLHUB_TRIGGER_URL}"
 
 mlhub:sre_4k_260bps:
   extends: .mlhub_sre
   variables:
-    CONDITION: "4k_260bps"
+    TITLE: "SRE: 4k 260bps v4.1.0"
     SRE_CONFIG: "dna_r10.4.1-e8.2-4khz-260bps-prom.json"
     MODELS: '["dna_r10.4.1_e8.2_260bps_fast@v4.1.0","dna_r10.4.1_e8.2_260bps_hac@v4.1.0","dna_r10.4.1_e8.2_260bps_sup@v4.1.0"]'
     DUPLEX_MODELS: "[]"
@@ -45,7 +45,7 @@ mlhub:sre_4k_260bps:
 mlhub:sre_4k_400bps_v4_1:
   extends: .mlhub_sre
   variables:
-    CONDITION: "4k_400bps"
+    TITLE: "SRE: 4k 400bps v4.1.0"
     SRE_CONFIG: "dna_r10.4.1-e8.2-4khz-400bps-prom.json"
     MODELS: '["dna_r10.4.1_e8.2_400bps_fast@v4.1.0","dna_r10.4.1_e8.2_400bps_hac@v4.1.0","dna_r10.4.1_e8.2_400bps_sup@v4.1.0"]'
     DUPLEX_MODELS: "[]"
@@ -53,7 +53,7 @@ mlhub:sre_4k_400bps_v4_1:
 mlhub:sre_5k_400bps_v4_3:
   extends: .mlhub_sre
   variables:
-    CONDITION: "5k_400bps"
+    TITLE: "SRE: 5k 400bps v4.3.0"
     SRE_CONFIG: "dna_r10.4.1-e8.2-5khz-400bps-prom.json"
     MODELS: '["dna_r10.4.1_e8.2_400bps_fast@v4.3.0","dna_r10.4.1_e8.2_400bps_hac@v4.3.0","dna_r10.4.1_e8.2_400bps_sup@v4.3.0"]'
     DUPLEX_MODELS: "[]"
@@ -61,7 +61,7 @@ mlhub:sre_5k_400bps_v4_3:
 mlhub:sre_5k_400bps_v5:
   extends: .mlhub_sre
   variables:
-    CONDITION: "5k_400bps"
+    TITLE: "SRE: 5k 400bps v5.0.0"
     SRE_CONFIG: "dna_r10.4.1-e8.2-5khz-400bps-prom.json"
     MODELS: '["dna_r10.4.1_e8.2_400bps_fast@v5.0.0","dna_r10.4.1_e8.2_400bps_hac@v5.0.0","dna_r10.4.1_e8.2_400bps_sup@v5.0.0"]'
     DUPLEX_MODELS: "[]"
@@ -69,7 +69,7 @@ mlhub:sre_5k_400bps_v5:
 mlhub:sre_5k_400bps_duplex:
   extends: .mlhub_sre
   variables:
-    CONDITION: "5k_400bps_duplex"
+    TITLE: "DRE: 5k 400bps DUPLEX v5.0.0"
     SRE_CONFIG: "dna_r10.4.2-e8.2-5khz-400bps-prom.json"
     MODELS: '["dna_r10.4.1_e8.2_400bps_hac@v5.0.0","dna_r10.4.1_e8.2_400bps_sup@v5.0.0"]'
     DUPLEX_MODELS: '["dna_r10.4.1_e8.2_5khz_stereo@v1.3"]'
@@ -86,25 +86,25 @@ mlhub:sre_5k_400bps_duplex:
     - |
       curl -i --header "Content-Type: application/json" \
       --request POST \
-      --data '{
-          "key": "'${MLHUB_TRIGGER_KEY_MRE}'",
-          "job_name": "Dorado MRE: '${SIMPLEX_MODEL}' '${CI_COMMIT_REF_NAME}' - '"$CI_COMMIT_TITLE"'" ,
-          "script_parameters": {
-              "simplex_model": "'${SIMPLEX_MODEL}'",
-              "basecaller_mode": "dorado_artifact",
-              "basecaller":"'${CI_COMMIT_SHA}'",
-              "model_4mC_5mC":"4mC_5mC",
-              "model_5mC_5hmC":"5mC_5hmC",
-              "model_5mCG_5hmCG":"5mCG_5hmCG",
-              "model_6mA":"6mA",
-              "model_m5C":"m5C",
-              "model_m6A":"m6A",
-              "model_m6A_DRACH":"m6A_DRACH",
-              "model_inosine_m6A":"inosine_m6A",
-              "model_pseU":"pseU"
+      --data "{
+          \"key\": \"${MLHUB_TRIGGER_KEY_MRE}\",
+          \"job_name\": \"Dorado MRE: ${SIMPLEX_MODEL} ${CI_COMMIT_REF_NAME} ${CI_COMMIT_SHORT_SHA}\",
+          \"script_parameters\": {
+              \"simplex_model\": \"${SIMPLEX_MODEL}\",
+              \"basecaller_mode\": \"dorado_artifact\",
+              \"basecaller\": \"${CI_COMMIT_SHA}\",
+              \"model_4mC_5mC\": \"4mC_5mC\",
+              \"model_5mC_5hmC\": \"5mC_5hmC\",
+              \"model_5mCG_5hmCG\": \"5mCG_5hmCG\",
+              \"model_6mA\": \"6mA\",
+              \"model_m5C\": \"m5C\",
+              \"model_m6A\": \"m6A\",
+              \"model_m6A_DRACH\": \"m6A_DRACH\",
+              \"model_inosine_m6A\": \"inosine_m6A\",
+              \"model_pseU\": \"pseU\"
           }
-      }' \
-      ${MLHUB_TRIGGER_URL}
+      }" \
+      "${MLHUB_TRIGGER_URL}"
 
 mlhub::mre_dna_hac:
   extends:
