DOR-1173: Enable per-read trace logging in CMake. Some minor changes based on code review.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -161,6 +161,12 @@ else()
     set(DORADO_ENABLE_PCH TRUE)
 endif()
 
+# By default, make per-read trace-logging a no-op. Turn this option on to enable it.
+option(DORADO_PER_READ_TRACE "Enable per-read trace logging" OFF)
+if(DORADO_PER_READ_TRACE)
+    add_compile_definitions(ENABLE_PER_READ_TRACE)
+endif()
+
 # Bring in 3rdparty libs
 add_subdirectory(dorado/3rdparty)
 
